--- a/style.css
+++ b/style.css
@@ -37,21 +37,23 @@ a {
 }
 
 #home-section {
+    display: flex;
+    flex-direction: column;
     background-image: url(img/empty-machine.jpg);
-    height: fit-content;
+    height: 95vh;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: auto;
     margin: 0;
     box-sizing: border-box;
-    z-index: 1000;
 }
 
 .navbar .logo {
-    font-size: 1.5em;
+    font-size: 1em;
     color: white;
     margin: 1em;
     text-align: center;
@@ -63,7 +65,14 @@ a {
     margin: 1em;
     width: 8em;
     height: 3em;
-    
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
 }
 
 .home-content {
@@ -71,10 +80,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
-    margin-top: 100px;
     width: auto;
-    height: auto;
     text-align: center;
 }
 
@@ -82,15 +88,15 @@ a {
     font-size: 5vw;
     font-weight: 800;
     text-align: center;
+    margin: 1em;
     color: white;
     width: 60%;
 }
 
 .home-description {
-    font-size: 1.3em;
     font-weight: 200;
     width: 30%;
-    margin-top: 50px;
+    margin: 1em;
     color: white;
 }
 
@@ -99,11 +105,10 @@ a {
     justify-content: center;
     align-items: center;
     font-size: medium;
-    height: 20em;
     text-align: center;
 }
 
-.home-button .button{
+.home-button .button {
     font-size: medium;
     width: 12em;
     height: 4em;
@@ -111,19 +116,23 @@ a {
     text-align: center;
 }
 
+
 .distrib-container {
-    position: relative;
     display: flex;
     flex-direction: column;
-    height: fit-content;
+    justify-content: center;
+    height: 95vh;
 }
 
 .distrib-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 20%;
     text-align: center;
     font-weight: 900;
     font-size: 3em;
-    margin-top: 1em;
     color: var(--primary-color);
     z-index: 1000;
 }
@@ -133,7 +142,6 @@ a {
     justify-content: space-between;
     padding: 0 20% 0 20%;
     height: 100%;
-    margin: 3em 0 4em 0;
 }
 
 .distrib-description {
@@ -215,9 +223,8 @@ a {
 }
 
 .indicators {
-    height: 20%;
-    margin: 3em;
     display: flex;
+    height: 10%;
     justify-content: center;
     align-items: center;
 }
@@ -292,7 +299,7 @@ footer {
     justify-content: center;
     padding: 3em;
     color: white;
-    background-color:#265073;
+    background-color: var(--primary-color);
     height: auto;
     text-align: center;
 }
@@ -310,7 +317,7 @@ footer {
     justify-content: center;
     align-items: center;
     width: auto;
-    margin: 1em 0 1em 0;
+    margin: 1em 0 3em 0;
 }
 
 .contact {
@@ -340,6 +347,11 @@ footer {
 }
 
 @media screen and (max-width: 1000px) {
+    .distrib-title {
+        height: 3em;
+        margin: 1em 0 1em 0;
+    }
+    
     .distrib-container {
         height: auto;
     }
@@ -367,7 +379,6 @@ footer {
     
     .carousel-container {
         width: 100%;
-        margin: 2em 0 2em 0;
     }
 
     .carousel-slide img{
@@ -376,8 +387,8 @@ footer {
     }
 
     .indicators {
-        height: auto;
-        margin-bottom: 3em;
+        height: 3em;
+        margin: 1em 0 1em 0;
     }
 
     .card {
@@ -395,16 +406,6 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    .home-content {
-        margin-top: 50px;
-    }
-
-    .home-button {
-        display: flex;
-        flex-direction: column;
-        margin-top: 30px;
-    }    
-
     .navbar {
         flex-direction: column;
         align-items: center;
@@ -414,15 +415,27 @@ footer {
         margin-bottom: 10px;
     }
 
+    .home-content {
+        width: 80%; 
+    }
+
     .home-title {
-        font-size: 3em;
-        width: 100%;
+        font-size: 8vw; 
+        width: 80%;
     }
 
-    .distrib-container {
-        margin-top: 2em;
+    .home-description {
+        width: 80%;
     }
 
+    .home-button {
+        flex-direction: column; 
+    }
+
+    .home-button .button {
+        width: 100%; 
+    }
+    
     .distrib-description {
         align-items: center;
     }
@@ -433,11 +446,6 @@ footer {
 
     .description-text ul {
         margin: 0;
-    }
-
-    .indicators {
-        height: auto;
-        margin-bottom: 3em;
     }
 
     .card {
